[package]
name = "loth"
version = "0.1.0"
edition = "2024"

[dependencies]
arc-swap = "1.9"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
tokio-stream = "0.1"
tonic = { version = "0.14", features = ["tls-aws-lc"] }
prost = "0.14"
prost-types = "0.14"
tonic-prost = "0.14"
tracing = "0.1"
cedar-policy = "4.11"

[build-dependencies]
prost = "0.14"
tonic-prost-build = "0.14"
tonic-prost = "0.14"
prost-build = "0.14"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
